# progprocedurale

./: .gitignore  CMakeLists.txt  README.md  input.txt
c/: helloworld.c
c/aoc/: a.out  day1.c
c/c/: 1) Accesso a vettore tramite puntatore.c  2) Puntatori a funzione.c  3) Macro.c  6) Stack.c  8) Lista.c  9) Grafi.c  a.out  grafi.c  lista.c  main.c  mat.c  pipe  pipe.c  stack.c
c/c/functions/: pointersAndFunctions.c
c/c/inputOutput/: a.out  mycat.c
c/c/pointers/: pointers.c  pointersToFunctions.c
c/c/structs/: structs.c
c/eserciziManuela/: a.out  es22.c  es31.c  es33.c  es34.c  esLibro.c  esManuStruct.c  esameManuela.c  listaManu.c  rmstring.c
c/eserciziManuela/esercizi manuela/: esercizi 1 condizionali e loop.docx  esercizi 10 ricorsione e file.docx  esercizi 11 liste.docx  esercizi 12 liste.docx  esercizi 13 riassuntivi .docx  esercizi 14 riassuntivi.docx  esercizi 15 riepilogo.docx  (+9 more)
c/examples/: macro.c  sommaArbitrariaParametriVariabili.c
c/functions/: charPointersAndFunctions.c  patternMatcher.c
c/inputOutput/: lower.c
c/pointers/: pointers.c
c/sorgentiC/: 11) File.c  2) Bigcounter.c  4) Printf minimale (parametri variabili).c  7) TracciaMatrice.c  8) Stack.c
c/structs/: tree.c
cpp/aoc/: day1.cpp  day17.cpp
cpp/filippo/: compito2203.cpp
cpp/gest/: main.cpp
cpp/multithreading/: multi.cpp
cpp/sorgenti/: 1) NascitaeMorteOggetti.cpp  2) Friend.cpp  9) OverloadingFunzioni.cpp  ClassiAstratte.cpp  EriditaMultipla.cpp  Genericita.cpp  conversioni.cpp  funzioniVituali.cpp  ordineChiamataCostruttori.cpp  overloading_operatori.cpp
(+34 files in other folders)
