cmake_minimum_required(VERSION 3.21)
project(progprocedurale)

#set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_STANDARD 17)

#add_executable(progprocedurale cpp/aoc/day1.cpp)
#add_executable(progprocedurale c/aoc/day1.c)
add_executable(progprocedurale  c/eserciziManuela/rmstring.c)
#add_executable(progprocedurale cpp/sorgenti/ordineChiamataCostruttori.cpp)
#add_executable(progprocedurale cpp/sorgenti/conversioni.cpp)